# polyagent

./: .env.example  .gitignore  AGENT_PROMPT.md  Cargo.toml  Dockerfile  README.md  config.toml  dev  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.claude/: settings.local.json
.cursor/: ecc-install-state.json
.playwright-cli/: page-2026-04-15T01-11-03-504Z.yml  page-2026-04-15T01-11-59-228Z.yml  page-2026-04-15T01-26-57-859Z.yml  page-2026-04-15T01-49-53-299Z.yml
apps/dashboard/: Cargo.toml
apps/dashboard/src/: index.html  main.rs
apps/derive-clob-creds/: Cargo.toml
apps/derive-clob-creds/src/: main.rs
apps/flow-theatre/: index.html  package-lock.json  package.json  vite.config.ts
apps/flow-theatre/src/: App.tsx  index.css  main.tsx
apps/flow-theatre/src/components/: FlowDashboard.module.css  FlowDashboard.tsx  TradingDeskPanel.module.css  TradingDeskPanel.tsx
apps/flow-theatre/src/hooks/: useActivityFeed.ts  useAgentMetrics.ts  usePanelFeed.ts
apps/flow-theatre/src/metrics/: parsePrometheus.ts
apps/flow-theatre/src/theatre/: flowProject.ts  studioInit.ts
apps/live-agent/: Cargo.toml
apps/live-agent/src/: activity_api.rs  main.rs  training_log.rs
apps/replay-cli/: Cargo.toml
apps/replay-cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: clob_ids.rs  clock.rs  config.rs  error.rs  lib.rs  ring.rs  telemetry.rs  types.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: book_bootstrap.rs  lib.rs  market_discovery.rs  normalizer.rs  streams.rs
crates/paper_engine/: Cargo.toml
crates/paper_engine/src/: lib_new.rs  market_data.rs  models.rs  reason_codes.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/signal/: Cargo.toml
crates/signal/src/: lib.rs
docker/: prometheus.yml
docs/plans/: 2026-04-15-algo-stabilization-design.md  2026-04-15-algo-stabilization-implementation.md  2026-04-15-flow-dashboard-design.md  2026-04-15-flow-dashboard-implementation.md
scripts/: apply-clob-creds.sh
