[workspace]
resolver = "3"
members = [
  "crates/core",
  "crates/ingest",
  "crates/signal",
  "crates/risk",
  "crates/execution",
  "crates/replay",
  "crates/paper_engine",
  "apps/live-agent",
  "apps/replay-cli",
  "apps/dashboard",
  "apps/derive-clob-creds",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Polymarket HFT Team"]

[workspace.dependencies]
alloy-primitives = "1.5.7"
alloy-signer-local = "1.8.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "json"] }
bon = "3.9.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive", "env"] }
config = "0.15.18"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
futures = "0.3.31"
humantime-serde = "1.1.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
once_cell = "1.21.3"
parking_lot = "0.12.5"
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "ws", "rtds", "gamma", "data", "heartbeats", "tracing"] }
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rust_decimal = { version = "1.41.0", features = ["serde", "maths"] }
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
