[package]
name = "polyhft-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy-signer-local.workspace = true
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
polymarket-client-sdk.workspace = true
rand.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

polyhft-core = { path = "../core" }
