[package]
name = "polyhft-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
polymarket-client-sdk.workspace = true
regex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

polyhft-core = { path = "../core" }
