[package]
name = "polyhft_paper_engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib_new.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
rand.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

polyhft-core = { path = "../core" }
